Seção 04 - React Axios (integração front-back) e Modal.

--- a/front/pro-atividade-app/src/index.css
+++ b/front/pro-atividade-app/src/index.css
@@ -1,1 +1,2 @@
 @import url('../node_modules/@fortawesome/fontawesome-svg-core/styles.css');
+/* @import url('../node_modules/@fortawesome/fontawesome-free/css/all.min.css'); */
